--- a/info.toml
+++ b/info.toml
@@ -4,9 +4,10 @@ author = "Greep"
 category = "Overlay"
 siteid = 207
 
-version = "1.2.0"
+version = "1.3.0"
 
 [script]
 dependencies = [ "VehicleState" ]
+optional_dependencies = [ "CurrentEffects" ]
 
 timeout = 0
